--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "fosfonizador",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/bot.js",
     "dev": "nodemon src/bot.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Carti",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.1"
